FIX (config): Add CORS configuration support with properties for allowed origins, methods, headers, and credentials